Revise personal details and update publications section
Updated personal information and research focus in the index.html file. Added new publications, awards, and technical skills.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <link rel="stylesheet" type="text/css" href="./files/style.css">
   <link rel="icon" href="./files/icons/MR.png" type="image/x-icon"> 
   <meta name="author" content="Ilyas Modni">
-  <meta name="description" content="Homepage of Ilyas Modni">
+  <meta name="description" content="Homepage of Ilyas Modni - PhD Candidate in AI">
 </head>
 
 <body style="margin-top:1cm;margin-left:3cm;margin-right:5cm;">
 
+  <!-- Header Section -->
   <table border="0" cellspacing="0">
     <tr>
       <td align="left"><img width="215" height="252" src="./files/Ilyas_modni.png" alt="Ilyas Modni"></td>
@@ -18,62 +19,98 @@
       <td align="left" nowrap>
         <h2>Ilyas Modni</h2>
         <samp>
-          Ph.D. Student in Road Safety through Artificial Intelligence<br>
-          Mohammadia School of Engineering(EMI) – UM5, Rabat, Morocco<br><br>
-          Email: ilyas_modni [at] um5 [dot] ac [dot] ma <br>
-          Email: i [dot] modni [at] research [dot] emi [dot] ac [dot] ma <br><br>
-          <a href="https://www.linkedin.com/in/ilyas-modni/"><img src="./files/icons/linkedin_icon.png" width="24px"></a>
-          <a href="#"><img src="./files/icons/google_scholar_icon.png" width="24px"></a>
+          PhD Candidate in Artificial Intelligence & Decision Tree Optimization<br>
+          Mohammadia School of Engineering (EMI) – Rabat, Morocco<br><br>
+          Email: i [dot] modni [at] research [dot] emi [dot] ac [dot] ma <br>
+          Citizenship: Moroccan<br><br>
+          <!-- Social Icons -->
+          <a href="https://www.linkedin.com/in/ilyas-modni/" target="_blank"><img src="./files/icons/linkedin_icon.png" width="24px" alt="LinkedIn"></a>
+          &nbsp;
+          <a href="https://modniilyas.github.io" target="_blank"><img src="./files/icons/github_icon.png" width="24px" alt="GitHub"></a> <!-- Make sure you have a github icon file -->
+          &nbsp;
+          <a href="#" target="_blank"><img src="./files/icons/google_scholar_icon.png" width="24px" alt="Google Scholar"></a>
         </samp><br>
       </td>
     </tr>
   </table>
 
+  <!-- About Section -->
   <h2>About</h2>
   <p>
-    I am a second-year Ph.D. student at the Mohammadia School of Engineering in Rabat, Morocco. My research focuses on applying machine learning to road safety, aiming to develop predictive models that identify accident risk factors and support data-driven strategies. I actively participate in international conferences and projects to enhance public safety through AI innovation.
+    I am a Ph.D. Candidate at the Mohammadia School of Engineering (EMI) in Rabat, Morocco. My research focuses on the intersection of <b>Machine Learning, Optimization, and Road Safety</b>, with a specific interest in Decision Trees, Explainable AI (XAI), and Large Language Models (LLMs).
+  </p>
+  <p>
+    My thesis, <i>"Design and Development of an Intelligent System for Road Safety Data Valorization,"</i> aims to develop actionable predictive models to identify accident risk factors. I am passionate about bridging the gap between theoretical AI and real-world application to enhance public safety.
   </p>
 
   <p>
-    <u><a href="./files/CV_2025-05-30_Ilyas_Modni.pdf">CV</a></u>
+    <u><a href="./files/CV_Ilyas_Modni_Nov2025.pdf" target="_blank">Download CV (PDF)</a></u>
   </p>
 
   <br>
 
-  <h2>Selected Projects & Contributions</h2>
+  <!-- Publications Section -->
+  <h2>Publications</h2>
   <ul>
     <li>
-      <p><b>Smart Home Security Research</b><br>
-      Collaborated with Manageering Inc. on a market research project to develop a Moroccan platform for smart home security.</p>
+      [SITA 2025] <b>I. Modni</b>, et al. “Current Machine Learning Applications in Road Safety Monitoring: A Comprehensive Review.” <i>The 15th International Conference on Intelligent Systems: Theories and Applications.</i> (Oct 2025).
     </li>
     <li>
-      <p><b>Data Visualization for Industry</b><br>
-      At Leoni (Berrchid), built BI dashboards and predictive analytics tools to monitor KPIs in real time.</p>
+      [IEOM 2025] <b>I. Modni</b>, et al. “An Overview of the Limitations of Traditional Greedy Tree-Based Methods.” <i>International Conference on Industrial Engineering and Operations Management.</i> (Apr 2025).
     </li>
     <li>
-      <p><b>Facial Recognition for Attendance System</b><br>
-      Developed a smart attendance management system using facial recognition technology to automate student tracking at FSBM Casablanca.</p>
+      [Submitted] <b>I. Modni</b>, et al. “Towards Improved Decision Tree Interpretability via Large Language Models.” <i>(GOL 2026)</i>.
+    </li>
+    <li>
+      [Submitted] <b>I. Modni</b>, et al. “Actionable Predictive Analytics for Informed Road Safety Decisions.” <i>Accident Analysis & Prevention Journal.</i>
     </li>
   </ul>
 
-  <h2>Conferences & Workshops</h2>
+  <!-- Honors & Awards -->
+  <h2>Honors & Awards</h2>
   <ul>
-    <li><b>Responsible ML Winter School – Umeå, Sweden</b></li>
-    <li><b>Winter School: Next-Generation AI and Economic applications – Benguerir, Morocco (UM6P)</b></li>
-    <li><b>OLA 2024 – Dubrovnik, Croatia:</b> “Machine Learning Applications in Road Safety: A Comprehensive Review”</li>
-    <li><b>International Spring School 2024 – Rabat:</b> Multimodal Foundation Models and Generative AI</li>
+    <li><b>PhD-Associate Scholarship (PASS) – Excellence Grant:</b> Co-funded by the Ministry of Higher Education & CNRST (Since 2023).</li>
+    <li><b>Ma Thèse en 180 secondes (MT180):</b> University Finalist representing EMI at Mohammed V University (May 2025).</li>
   </ul>
 
-  <h2>Skills</h2>
+  <!-- Projects Section -->
+  <h2>Selected Projects</h2>
   <ul>
-    <li><b>Languages:</b> Python, SQL, Java (JEE)</li>
-    <li><b>ML Tools:</b> Scikit-learn, AutoML, Time Series Forecasting</li>
-    <li><b>BI Tools:</b> Power BI, Tableau, Dash</li>
-    <li><b>Web Dev:</b> React, Flask</li>
-    <li><b>Big Data:</b> Hadoop, Hive, NIFI, MongoDB</li>
+    <li>
+      <p><b>DomotiCool (Manageering Inc.):</b> Collaborated on a research project creating a Moroccan platform for smart home security; utilized BI techniques to analyze market behavior and user preferences.</p>
+    </li>
+    <li>
+      <p><b>KPI Forecasting & Visualization (Leoni):</b> Designed dynamic KPI visualizations and applied predictive algorithms (Time Series) to forecast trends for real-time decision-making.</p>
+    </li>
+    <li>
+      <p><b>Class Attendance Management System:</b> Created an innovative solution automating classroom attendance tracking utilizing facial recognition technology.</p>
+    </li>
   </ul>
 
-  <p><small>Last updated: May 2025</small></p>
+  <!-- Presentations & Schools -->
+  <h2>Talks & Schools</h2>
+  <ul>
+    <li><b>AI For Road Safety Workshop (EMI, Rabat):</b> Presenter – “Actionable Predictive Analytics for Informed Road Safety Decisions” (Nov 2025).</li>
+    <li><b>Responsible ML Winter School:</b> Umeå University, Sweden (Mar 2025).</li>
+    <li><b>Next-Gen AI & Economic Applications Winter School:</b> UM6P, Benguerir (Feb 2025).</li>
+    <li><b>Manageering University Startups 2024:</b> Presenter – “DomotiCool: AI-powered smart devices platform” (July 2024).</li>
+    <li><b>OLA 2024 (Dubrovnik, Croatia):</b> Presenter – “Machine Learning Applications in Road Safety” (May 2024).</li>
+  </ul>
+
+  <!-- Skills Section -->
+  <h2>Technical Skills</h2>
+  <ul>
+    <li><b>AI & ML:</b> Deep Learning, Advanced Decision Trees, XAI, AutoML, LLMs, Prompt Engineering.</li>
+    <li><b>Programming:</b> Python, SQL, R.</li>
+    <li><b>Data Science Libraries:</b> Pandas, NumPy, Matplotlib, Seaborn, Plotly.</li>
+    <li><b>Big Data & Tools:</b> Apache Hadoop, Hive, NiFi, MongoDB, HBase, MySQL.</li>
+    <li><b>Web & BI:</b> React, Flask, Power BI, Tableau, Dash.</li>
+    <li><b>Dev & Research:</b> Git/GitHub, LaTeX, Zotero, Docker, VS Code.</li>
+  </ul>
+
+  <br>
+  <hr>
+  <p align="center"><small>Last updated: November 2025</small></p>
 
 </body>
 </html>
