Add ORCID link and update GitHub icon section

--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
           Mohammadia School of Engineering (EMI) – Rabat, Morocco<br><br>
           Email: i [dot] modni [at] research [dot] emi [dot] ac [dot] ma <br>
           Citizenship: Moroccan<br><br>
+          
           <!-- Social Icons -->
+          <!-- LinkedIn -->
           <a href="https://www.linkedin.com/in/ilyas-modni/" target="_blank"><img src="./files/icons/linkedin_icon.png" width="24px" alt="LinkedIn"></a>
           &nbsp;
-          <a href="https://modniilyas.github.io" target="_blank"><img src="./files/icons/github_icon.png" width="24px" alt="GitHub"></a> <!-- Make sure you have a github icon file -->
+          <!-- ORCID (Added) -->
+          <a href="https://orcid.org/0009-0002-9498-8963" target="_blank"><img src="./files/icons/orcid_icon.png" width="24px" alt="ORCID"></a>
           &nbsp;
+          <!-- GitHub -->
+          <a href="https://modniilyas.github.io" target="_blank"><img src="./files/icons/github_icon.png" width="24px" alt="GitHub"></a>
+          &nbsp;
+          <!-- Google Scholar -->
           <a href="#" target="_blank"><img src="./files/icons/google_scholar_icon.png" width="24px" alt="Google Scholar"></a>
         </samp><br>
       </td>
