--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="https://www.linkedin.com/in/ilyas-modni/" target="_blank"><img src="./files/icons/linkedin_icon.png" width="24px" alt="LinkedIn"></a>
           &nbsp;
           <!-- ORCID (Added) -->
-          <a href="https://orcid.org/0009-0002-9498-8963" target="_blank"><img src="./files/icons/orcid_icon.png" width="24px" alt="ORCID"></a>
+          <a href="https://orcid.org/0009-0002-9498-8963" target="_blank"><img src="./files/icons/orcid_logo.svg" width="24px" alt="ORCID"></a>
           &nbsp;
           <!-- GitHub -->
           <a href="https://modniilyas.github.io" target="_blank"><img src="./files/icons/github_icon.png" width="24px" alt="GitHub"></a>
@@ -51,7 +51,7 @@
   </p>
 
   <p>
-    <u><a href="./files/CV_Ilyas_Modni_Nov2025.pdf" target="_blank">Download CV (PDF)</a></u>
+    <u><a href="./files/CV_IlyasModni_2025.pdf" target="_blank">Download CV (PDF)</a></u>
   </p>
 
   <br>
