Update ORCID label and fix project description

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <!-- LinkedIn -->
           <a href="https://www.linkedin.com/in/ilyas-modni/" target="_blank"><img src="./files/icons/linkedin_icon.png" width="24px" alt="LinkedIn"></a>
           &nbsp;
-          <!-- ORCID (Added) -->
+          <!-- ORCID (SVG Logo) -->
           <a href="https://orcid.org/0009-0002-9498-8963" target="_blank"><img src="./files/icons/orcid_logo.svg" width="24px" alt="ORCID"></a>
           &nbsp;
           <!-- GitHub -->
@@ -84,7 +84,7 @@
   <h2>Selected Projects</h2>
   <ul>
     <li>
-      <p><b>DomotiCool (Manageering Inc.):</b> Collaborated on a research project creating a Moroccan platform for smart home security; utilized BI techniques to analyze market behavior and user preferences.</p>
+      <p><b>DomotiCool (Manageering Inc.):</b> Collaborated on a research project creating a Moroccan platform for smart home security, utilized BI techniques to analyze market behavior and user preferences.</p>
     </li>
     <li>
       <p><b>KPI Forecasting & Visualization (Leoni):</b> Designed dynamic KPI visualizations and applied predictive algorithms (Time Series) to forecast trends for real-time decision-making.</p>
