Update ORCID icon source in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="https://www.linkedin.com/in/ilyas-modni/" target="_blank"><img src="./files/icons/linkedin_icon.png" width="24px" alt="LinkedIn"></a>
           &nbsp;
           <!-- ORCID (SVG Logo) -->
-          <a href="https://orcid.org/0009-0002-9498-8963" target="_blank"><img src="./files/icons/orcid_logo.svg" width="24px" alt="ORCID"></a>
+          <a href="https://orcid.org/0009-0002-9498-8963" target="_blank"><img src="./files/icons/ORCID_icon.png" width="24px" alt="ORCID"></a>
           &nbsp;
           <!-- GitHub -->
           <a href="https://modniilyas.github.io" target="_blank"><img src="./files/icons/github_icon.png" width="24px" alt="GitHub"></a>
