Modify affiliation and add DOI for IEOM 2025 paper
Updated affiliation and added DOI link for a conference paper.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <h2>Ilyas Modni</h2>
         <samp>
           PhD Candidate in Artificial Intelligence & Decision Tree Optimization<br>
-          Mohammadia School of Engineering (EMI) – Rabat, Morocco<br><br>
+          Mohammadia School of Engineering (EMI), UM5R – Rabat, Morocco<br><br>
           Email: i [dot] modni [at] research [dot] emi [dot] ac [dot] ma <br>
-          Citizenship: Moroccan<br><br>
+          WWW: https://modniilyas.github.io<br><br>
           
           <!-- Social Icons -->
           <!-- LinkedIn -->
@@ -32,8 +32,8 @@
           <a href="https://orcid.org/0009-0002-9498-8963" target="_blank"><img src="./files/icons/ORCID_icon.png" width="24px" alt="ORCID"></a>
           &nbsp;
           <!-- GitHub -->
-          <a href="https://modniilyas.github.io" target="_blank"><img src="./files/icons/github_icon.png" width="24px" alt="GitHub"></a>
-          &nbsp;
+          <!--<a href="https://modniilyas.github.io" target="_blank"><img src="./files/icons/github_icon.png" width="24px" alt="GitHub"></a>
+          &nbsp;-->
           <!-- Google Scholar -->
           <a href="#" target="_blank"><img src="./files/icons/google_scholar_icon.png" width="24px" alt="Google Scholar"></a>
         </samp><br>
@@ -63,7 +63,8 @@
       [SITA 2025] <b>I. Modni</b>, et al. “Current Machine Learning Applications in Road Safety Monitoring: A Comprehensive Review.” <i>The 15th International Conference on Intelligent Systems: Theories and Applications.</i> (Oct 2025).
     </li>
     <li>
-      [IEOM 2025] <b>I. Modni</b>, et al. “An Overview of the Limitations of Traditional Greedy Tree-Based Methods.” <i>International Conference on Industrial Engineering and Operations Management.</i> (Apr 2025).
+      [IEOM 2025] <b>I. Modni</b>, et al. “An Overview of the Limitations of Traditional Greedy Tree-Based Methods.” <i>International Conference on Industrial Engineering and Operations Management.</i> (Apr 2025). 
+      DOI: <a href="https://index.ieomsociety.org/index.cfm/article/view/ID/29520" target="_blank">10.46254/AF6.20250145</a>
     </li>
     <li>
       [Submitted] <b>I. Modni</b>, et al. “Towards Improved Decision Tree Interpretability via Large Language Models.” <i>(GOL 2026)</i>.
